--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <img style="text-align:center" src="https://github.com/HolyStudio/testerwww/raw/master/qcode.png" width="100" height="100" alt=""/>
         
     </body>
-    <a style="text-align:center" href="itms-services:///?action=download-manifest&url=https://raw.githubusercontent.com/HolyStudio/tester/master/manifest.plist">点我下载</a>
+    <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/HolyStudio/tester/master/manifest.plist">点我下载</a>
 </html>
 
