--- a/apps/poem/index.html
+++ b/apps/poem/index.html
@@ -6,7 +6,7 @@
     </head>
     <style>body="text-align:center"</style>
     <body width="100" height="100">
-        <img style="text-align:center" src="https://github.com/HolyStudio/testerwww/raw/master/qcode.png" width="100" height="100" alt=""/>
+        <img style="text-align:center" src="./qcode.png" width="100" height="100" alt=""/>
         
     </body>
     <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/HolyStudio/tester/master/manifest.plist">点我下载</a>
