--- a/apps/poem/index.html
+++ b/apps/poem/index.html
@@ -3,12 +3,48 @@
     <head>
         <meta charset="UTF-8">
             <title>一起学-唐诗</title>
+            <style type="text/css">
+                body {
+                        background: url(bkg.png) repeat #c5ccd4;
+                        font-family: Helvetica, arial, sans-serif;
+                }
+                .congrats {
+                        font-size: 16pt;
+                        padding: 6px;
+                        text-align: center;
+                }
+                .step {
+                        background:white;
+                        border: 1px #ccc solid;
+                        border-radius: 14px;
+                        padding: 4px 10px;
+                        margin: 10px 0;
+                }
+                .instructions {
+                        font-size: 10pt;
+                }
+                .arrow {
+                        font-size: 15pt;
+                }
+                table {
+                        width: 100%;
+                }
+        </style>
     </head>
     <style>body="text-align:center"</style>
     <body width="100" height="100">
         <img style="text-align:center" src="./qcode.png" width="100" height="100" alt=""/>
         
+        <div class="step">
+        <table><tr>
+                <td class="instructions">Install the<br />FilmPicker App</td>
+                <td width="24" class="arrow">→</td>
+                <td width="72" class="imagelink">
+                    <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/HolyStudio/tester/master/manifest.plist">点我下载</a>
+                </td>
+        </tr></table>
+</div>
     </body>
-    <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/HolyStudio/tester/master/manifest.plist">点我下载</a>
+    
 </html>
 
