--- a/apps/poem/index.html
+++ b/apps/poem/index.html
@@ -37,7 +37,7 @@
         
         <div class="step">
         <table><tr>
-                <td class="instructions">Install the<br />FilmPicker App</td>
+                <td class="instructions">Install the<br /> 一起学@唐诗 App</td>
                 <td width="24" class="arrow">→</td>
                 <td width="72" class="imagelink">
                     <a style="text-align:center" href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/HolyStudio/tester/master/manifest.plist">点我下载</a>
